# Inventory-tracking-loop

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CSV uploads spec.md  Dockerfile  MISSION.md  Makefile  PROGRESS.md  README.md  additions_spec.md  fly.toml  handoff.md  loop.sh  pyproject.toml  testnotes.md
.github/workflows/: ci.yml
app/: __init__.py  app_settings_store.py  audit.py  audit_routes.py  auth.py  checkouts.py  checkouts_admin.py  config.py  cost_engine.py  csrf.py  csv_export.py  csv_import.py  dashboard.py  db.py  designs.py  email_backend.py  field_catalog.py  field_defs.py  field_storage.py  field_visibility.py  item_units.py  items.py  locations.py  main.py  metals.py  models.py  movements.py  oauth_test_stub.py  pdf.py  purchase_orders.py  reason_codes.py  reorder.py  reports.py  scan.py  side_tables.py  sku.py  stock_takes.py  stone_shapes.py  stones.py  suppliers.py  (+4 more)
app/static/: uc.css
app/templates/: _components.html  admin_audit.html  admin_users.html  base.html  checkout_form.html  checkouts_admin.html  csv_upload_form.html  csv_upload_preview.html  dashboard.html  designs_form.html  designs_list.html  index.html  item_detail.html  item_set_stone_form.html  item_stage_form.html  item_unit_form.html  item_units_list.html  items_category_options_partial.html  items_form.html  items_form_builtins.html  items_form_custom_fields.html  items_form_fields.html  items_list.html  locations_form.html  locations_list.html  metal_pool.html  metal_prices_form.html  metal_prices_list.html  metals_form.html  metals_list.html  pending.html  purchase_order_detail.html  purchase_order_new_form.html  purchase_order_receive_form.html  purchase_orders_list.html  reason_codes_form.html  reason_codes_list.html  reorder_dashboard.html  scan.html  stock_adjust_form.html  (+32 more)
docs/: taxonomy-refinement-plan.md
docs/adr/: 003-designs-split-from-taxonomy.md
migrations/: env.py
migrations/versions/: 0001_create_users.py  0002_create_audit_log.py  0003_create_suppliers.py  0004_create_locations.py  0005_create_taxonomy_nodes.py  0006_create_taxonomy_field_defs.py  0007_create_items.py  0008_create_item_field_values.py  0009_create_item_units.py  0010_create_cost_layers_and_movements.py  0011_create_purchase_orders.py  0012_add_stock_movements_po_id_fk.py  0013_create_checkouts.py  0014_create_stock_takes.py  0015_taxonomy_defaults_json.py  0016_taxonomy_archetype_and_prefix.py  0017_taxonomy_field_visibility.py  0018_lifecycle_stages.py  0019_transfer_orders.py  0020_po_in_transit.py  0021_taxonomy_field_def_catalog_key.py  0022_backfill_catalog_key.py  0023_drop_field_visibility.py  0024_promote_standard_fields.py  0025_create_stone_shape_master.py  0026_create_stones.py  0027_create_stone_events.py  0028_create_item_stones.py  0029_add_items_stone_columns.py  0030_create_metal_master.py  0031_create_metal_spot_prices.py  0032_add_items_metal_columns.py  0033_create_item_ring_attrs.py  0034_create_item_engagement_attrs.py  0035_create_item_band_attrs.py  0036_create_item_earring_attrs.py  0037_create_item_chain_attrs.py  0038_create_item_pendant_attrs.py  0039_create_item_engraving_attrs.py  0040_create_unit_master.py  (+5 more)
scripts/: fly-entrypoint.sh  seed_demo_data.py
tests/: conftest.py
tests/e2e/: conftest.py  test_admin_users_e2e.py  test_auth_e2e.py  test_auth_oauth_e2e.py  test_checkouts_e2e.py  test_dashboard_e2e.py  test_health_e2e.py  test_items_e2e.py  test_locations_e2e.py  test_movements_e2e.py  test_reorder_e2e.py  test_scan_e2e.py  test_stock_takes_e2e.py  test_suppliers_e2e.py  test_taxonomy_e2e.py
tests/integration/: test_admin_user_management.py  test_audit_coverage.py  test_audit_immutability.py  test_audit_routes.py  test_audit_view_routes.py  test_auth_routes.py  test_checkouts_admin_routes.py  (+44 more)
(+32 files in other folders)
